Bug 207646 - kpimutils does not compile on Windows w/ MSVC. Patch included.
Summary: kpimutils does not compile on Windows w/ MSVC. Patch included.
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kpimidentities (other bugs)
Version First Reported In: 4.3
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Tom Albers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-17 00:58 UTC by Michael Drüing
Modified: 2009-09-17 01:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch to fix compilation (1.31 KB, patch)
2009-09-17 00:59 UTC, Michael Drüing
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Drüing 2009-09-17 00:58:31 UTC
Version:            (using Devel)
Compiler:          MSVC 2008 compiled via emerge
OS:                MS Windows
Installed from:    Compiled sources

there are three errors in processes.{cpp,h} which keep it from compiling:
- Usage of undefined namespace KPIM
- QList<...> is required in the header file but not declared
- missing return value on killProcesses(...)

A patch to fix the 3 issues is attached.
Comment 1 Michael Drüing 2009-09-17 00:59:31 UTC
Created attachment 37005 [details]
patch to fix compilation

The patch to fix compilation on Windows w/ MSVC 2008 (and probably others, too).
Comment 2 Allen Winter 2009-09-17 01:42:12 UTC
SVN commit 1024628 by winterz:

Michael Drüing's patch to fix compile on MSVC 2008 
Thanks Michael.

BUG: 207646


 M  +1 -1      processes.cpp  
 M  +3 -1      processes.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1024628