Michael Drüing's patch to fix compile on MSVC 2008 Thanks Michael.

BUG: 207646

svn path=/trunk/KDE/kdepimlibs/; revision=1024628